# linguistics-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: ADDING_EXAMPLES.md  NEXT_STEPS.md  PLAN.md  PROGRESS.md  REJECT_LOG_TEMPLATE.md  RUN_TONIGHT.md  SCOPE.md
lo-leakage-paper/: README.md  main.aux  main.out  main.tex  refs.bib
lo-leakage-paper/sections/: 01_introduction.tex  02_related_work.tex  03_dataset.tex  04_isomorphs.tex  05_evaluation.tex  06_experiments.tex  07_results.tex  08_discussion.tex  09_limitations_ethics.tex  10_reproducibility.tex  A_appendix.tex
scripts/: download_iol.py  download_naclo.py  download_problems.py  download_uklo.py  extract_pairs_ollama.py  extract_pdf_raw.py  extract_structured.py  extract_structured_ollama.py  filter_raw.py  group_structured.py  merge_pdfs.py  merge_structured.py  pull_models.sh  validate_pairings.py  validate_reject_log.py
src/loleak/: __init__.py  eval.py  gap.py  grade.py  io.py  isomorph.py  ollama.py  run.py
