[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loleak"
version = "0.1.0"
description = "Reproducible Linguistics Olympiad benchmark runner with leakage stress tests"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
